[package]
name = "playlist_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
envy = "0.4"
ratatui = "0.30.2"
crossterm = "0.29.0"
rand = "0.10.2"
tui-spinner = "0.4.0"
futures = "0.3.32"
clap = { version = "4", features = ["derive"] }
capitalize = "0.3.4"
